--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <div class="container px-3 my-4 markdown-body">
+        <div class="container-lg px-3 my-4 markdown-body">
             {{ content }}
         </div>
     </body>
